--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: fancy's blog
 subtitle:
 description:
 keywords:
-author: John Doe
+author: fancy
 language:
 timezone:
 
